--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/axios": "^5.13.1",
     "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^3.9.1",
+    "faker": "^5.5.3",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
