--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "lint-staged": "^10.5.4",
     "postcss": "^8.2.8",
     "prettier": "^2.2.1"
+  },
+  "engines": {
+    "node": "16.x",
+    "npm": "7.x"
   }
 }
