--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt generate",
-    "start": "serve dist",
+    "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js"
@@ -39,7 +39,6 @@
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "postcss": "^8.2.8",
-    "prettier": "^2.2.1",
-    "serve": "^12.0.0"
+    "prettier": "^2.2.1"
   }
 }
